--- a/client/angular.json
+++ b/client/angular.json
@@ -31,7 +31,8 @@
             ],
             "scripts": [
               "node_modules/materialize-css/dist/js/materialize.js",
-              "src/assets/js/init.js"
+              "src/assets/js/init.js",
+              "src/assets/js/actions.js"
             ]
           },
           "configurations": {
