Creacion LoginUser e implementacion en el login

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -42,5 +42,9 @@
   "city": {
     "dataSource": "db",
     "public": true
+  },
+  "LoginUser": {
+    "dataSource": "db",
+    "public": true
   }
 }
