--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-google-recaptcha": "^1.0.3",
     "materialize-css": "^1.0.0-rc.2",
     "ng-recaptcha": "^5.0.0",
     "ngx-pagination": "^5.0.0",
