--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "loopback": "^3.22.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^6.2.0",
+    "loopback-component-storage": "^3.6.3",
     "loopback-connector-mongodb": "^4.2.0",
     "ng-recaptcha": "^5.0.0",
     "recaptcha": "^1.2.1",
