--- a/server/model-config.json
+++ b/server/model-config.json
@@ -46,5 +46,9 @@
   "LoginUser": {
     "dataSource": "db",
     "public": true
+  },
+  "containers": {
+    "dataSource": "UploadFiles",
+    "public": true
   }
 }
