correccion error Modal(Generico) y creacion containers (loopback component storage) UploadFiles

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -42,5 +42,9 @@
   "city": {
     "dataSource": "db",
     "public": true
+  },
+  "containers": {
+    "dataSource": "UploadFiles",
+    "public": true
   }
 }
