--- a/server/model-config.json
+++ b/server/model-config.json
@@ -51,13 +51,15 @@
     "dataSource": "UploadFiles",
     "public": true
   },
-  "Email":{
+  "Email": {
     "dataSource": "Email"
   },
   "inmueble": {
     "dataSource": "db",
     "public": true
+  },
+  "solicitud": {
+    "dataSource": "db",
+    "public": true
   }
-
-
 }
