--- a/server/model-config.json
+++ b/server/model-config.json
@@ -61,5 +61,9 @@
   "solicitud": {
     "dataSource": "db",
     "public": true
+  },
+  "codeudor": {
+    "dataSource": "db",
+    "public": true
   }
 }
