--- a/client/package.json
+++ b/client/package.json
@@ -20,8 +20,12 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "angular-google-recaptcha": "^1.0.3",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "materialize-css": "^1.0.0-rc.2",
     "ng-recaptcha": "^5.0.0",
+    "ngx-gallery": "^5.10.0",
+    "ngx-lightbox": "^2.1.2",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
