--- a/server/model-config.json
+++ b/server/model-config.json
@@ -15,7 +15,11 @@
   },
   "User": {
     "dataSource": "db",
-    "public": true
+    "public": true,
+    "options": {
+      "emailVerificationRequired": true
+    }
+
   },
   "AccessToken": {
     "dataSource": "db",
